FEAT:app add bet functionality
